# apps/api/openapi.json
@@ -276,12 +276,54 @@
           },
           "exchange": {
             "type": "string"
+          },
+          "latestClose": {
+            "anyOf": [
+              {
+                "$ref": "#/components/schemas/LatestClose_Output"
+              },
+              {
+                "type": "null"
+              }
+            ]
           }
         },
         "required": [
           "ticker",
           "name",
-          "exchange"
+          "exchange",
+          "latestClose"
+        ],
+        "additionalProperties": false
+      },
+      "LatestClose_Output": {
+        "type": "object",
+        "properties": {
+          "date": {
+            "type": "string",
+            "format": "date",
+            "pattern": "^(?:(?:\\d\\d[2468][048]|\\d\\d[13579][26]|\\d\\d0[48]|[02468][048]00|[13579][26]00)-02-29|\\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\\d|30)|(?:02)-(?:0[1-9]|1\\d|2[0-8])))$"
+          },
+          "close": {
+            "type": "string",
+            "pattern": "^\\d+(\\.\\d+)?$"
+          },
+          "previousClose": {
+            "anyOf": [
+              {
+                "type": "string",
+                "pattern": "^\\d+(\\.\\d+)?$"
+              },
+              {
+                "type": "null"
+              }
+            ]
+          }
+        },
+        "required": [
+          "date",
+          "close",
+          "previousClose"
         ],
         "additionalProperties": false
       },
@@ -347,6 +389,30 @@
         ],
         "additionalProperties": false
       },
+      "Split_Output": {
+        "type": "object",
+        "properties": {
+          "exDate": {
+            "type": "string",
+            "format": "date",
+            "pattern": "^(?:(?:\\d\\d[2468][048]|\\d\\d[13579][26]|\\d\\d0[48]|[02468][048]00|[13579][26]00)-02-29|\\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\\d|30)|(?:02)-(?:0[1-9]|1\\d|2[0-8])))$"
+          },
+          "from": {
+            "type": "string",
+            "pattern": "^\\d+(\\.\\d+)?$"
+          },
+          "to": {
+            "type": "string",
+            "pattern": "^\\d+(\\.\\d+)?$"
+          }
+        },
+        "required": [
+          "exDate",
+          "from",
+          "to"
+        ],
+        "additionalProperties": false
+      },
       "CandleSeries_Output": {
         "type": "object",
         "properties": {
@@ -361,12 +427,19 @@
             "items": {
               "$ref": "#/components/schemas/Candle_Output"
             }
+          },
+          "splits": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Split_Output"
+            }
           }
         },
         "required": [
           "ticker",
           "adjustment",
-          "candles"
+          "candles",
+          "splits"
         ],
         "additionalProperties": false
       },
